--- a/A_dbms/templates/dbms/warrant/modl/mod_form/stockes-add-edit.html
+++ b/A_dbms/templates/dbms/warrant/modl/mod_form/stockes-add-edit.html
@@ -1,11 +1,24 @@
 <div id="form_stockes_add_edit" class="warrant-extend" style="display: none">
 
+
     <div class="form-group"><!--所有者-->
+        <label for="id_stock_owner"
+               class="col-sm-3 control-label">{{ form_stockes_add_edit.stock_owner.label }}：</label>
+        <div class="col-sm-9">
+            <select name="stock_owner" id="id_stock_owner" required="" class="form-control search-id">
+                <option value="" selected="">---------</option>
+            </select>
+        </div>
+        <label id="e_stock_owner" class="pull-right">{{ form_stockes_add_edit.stock_owner.errors }}</label>
+    </div>
+
+    <!--
+    <div class="form-group">
         <label for="id_stock_owner"
                class="col-sm-3 control-label">{{ form_stockes_add_edit.stock_owner.label }}：</label>
         <div class="col-sm-9">{{ form_stockes_add_edit.stock_owner }}</div>
         <label id="e_stock_owner" class="pull-right">{{ form_stockes_add_edit.stock_owner.errors }}</label>
-    </div>
+    </div>所有者-->
 
     <div class="form-group"><!--标的公司-->
         <label for="id_target" class="col-sm-3 control-label">{{ form_stockes_add_edit.target.label }}：</label>
