--- a/A_dbms/templates/dbms/warrant/modl/warrant-add-mod.html
+++ b/A_dbms/templates/dbms/warrant/modl/warrant-add-mod.html
@@ -14,6 +14,7 @@
                 <form class="form-horizontal">
                     {% if warrant_typ_n == 0 %}
                         {% include 'dbms/warrant/modl/mod_form/warrant-add.html' %}
+                        {% include 'dbms/warrant/modl/mod_form/warrant-custom-search.html' %}
                         {% include 'dbms/warrant/modl/mod_form/house-add-edit.html' %}
                         {% include 'dbms/warrant/modl/mod_form/ground-add-edit.html' %}
                         {% include 'dbms/warrant/modl/mod_form/hypothec-add-edit.html' %}
