--- a/A_dbms/templates/dbms/warrant/warrant.html
+++ b/A_dbms/templates/dbms/warrant/warrant.html
@@ -11,4 +11,5 @@
 
 {% block extra-js %}
     {% include 'dbms/warrant/extra/js-warrant-add.html' %}
+    {% include 'dbms/js/js-warrant-custom.html' %}
 {% endblock %}
