--- a/A_dbms/templates/dbms/agree/extra/js-agree-add.html
+++ b/A_dbms/templates/dbms/agree/extra/js-agree-add.html
@@ -21,7 +21,7 @@
             });
             var postDataStr = JSON.stringify(postData);
 
-            console.log(postDataStr)
+            console.log(postDataStr);
 
             $.ajax({
                 url: '/dbms/agree/add/',
@@ -34,8 +34,8 @@
                     if (arg.status) {
                         $('#addAgreeModal').modal('hide');
                         alert(arg.message);
-                        window.location.href = arg.skip;
-                        {#window.location.reload();#}
+                        {#window.location.href = arg.skip;#}
+                        window.location.reload();
                     } else {
                         alert(arg.message);
                         $('#e_agree_amount').text(arg.forme.agree_amount);
