--- a/A_dbms/templates/dbms/article/scan/article-summry-body.html
+++ b/A_dbms/templates/dbms/article/scan/article-summry-body.html
@@ -1,36 +1,13 @@
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            客户名称：{{ article_obj.custom }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目编号：{{ article_obj.article_num }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            纪要编号：{{ article_obj.summary_num }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            金额合计：{{ article_obj.amount }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            续贷金额：{{ article_obj.renewal }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            新增金额：{{ article_obj.augment }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目经理：{{ article_obj.director.name }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目助理：{{ article_obj.assistant.name }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            风控专员：{{ article_obj.control.name }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            担保期限：{{ article_obj.credit_term }}个月
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            签批日期：{{ article_obj.sign_date }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目状态：{{ article_obj.get_article_state_display }}
-        </label>
+    客户名称：<a href="{% url 'dbms:custom_scan' custom_id=article_obj.custom.id %}">{{ article_obj.custom }}</a></label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">项目编号：{{ article_obj.article_num }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">纪要编号：{{ article_obj.summary_num }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">金额合计：{{ article_obj.amount }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">续贷金额：{{ article_obj.renewal }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">新增金额：{{ article_obj.augment }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">项目经理：{{ article_obj.director.name }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">项目助理：{{ article_obj.assistant.name }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">风控专员：{{ article_obj.control.name }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">担保期限：{{ article_obj.credit_term }}个月</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">签批日期：{{ article_obj.sign_date }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">目状态：{{ article_obj.get_article_state_display }}</label>
