--- a/A_dbms/templates/dbms/dun/seal_scan/tab/agent.html
+++ b/A_dbms/templates/dbms/dun/seal_scan/tab/agent.html
@@ -14,11 +14,14 @@
         </tr>
         </thead>
         <tbody>
-        {% for compensatory in p_list %}
+        {% for compensatory in dun_obj.compensatory.all %}
             <tr>
                 <td>{{ compensatory.provide.notify.agree.agree_num }}</td>
-                <td>{{ compensatory.provide.notify.agree.lending.summary.custom.short_name }}</td>
-                <td>{{ compensatory.provide.notify.agree.branch.short_name }}</td>
+                <td>
+                    <a href="{% url 'dbms:compensatory_scan' compensatory_id=compensatory.id %}">
+                        {{ compensatory.provide.notify.agree.lending.summary.custom }}</a>
+                </td>
+                <td>{{ compensatory.provide.notify.agree.branch }}</td>
                 <td>{{ compensatory.compensatory_date }}</td>
                 <td align="right">{{ compensatory.compensatory_capital|floatformat:2 }}</td>
                 <td align="right">{{ compensatory.compensatory_interest|floatformat:2 }}</td>
