--- a/A_dbms/templates/dbms/warrant/agree/warrant-agree-table.html
+++ b/A_dbms/templates/dbms/warrant/agree/warrant-agree-table.html
@@ -15,9 +15,9 @@
         {% for agree in p_list %}
             <tr>
                 <td><a href="{% url 'dbms:warrant_agree_scan' agree_id=agree.id %}">{{ agree.agree_num }}</a></td>
-                <td>{{ agree.lending.summary.custom }}</td>
-                <td>{{ agree.branch.name }}</td>
-                <td>{{ agree.agree_amount }}</td>
+                <td>{{ agree.lending.summary.custom.short_name }}</td>
+                <td>{{ agree.branch.short_name }}</td>
+                <td align="right">{{ agree.agree_amount }}</td>
                 <td>{{ agree.get_agree_typ_display }}</td>
                 <td>{{ agree.lending.summary.summary_num }}</td>
                 <td>{{ agree.get_agree_state_display }}</td>
