--- a/A_dbms/templates/dbms/warrant/extra/js-warrant-add.html
+++ b/A_dbms/templates/dbms/warrant/extra/js-warrant-add.html
@@ -19,6 +19,7 @@
         console.log("bind_id_warrant_typ_n");
         var selected_warrant_typ_n = $('#id_warrant_typ_n').val();
         $('.warrant-extend').hide();
+        $('#id_search_custom').hide();
         console.log(selected_warrant_typ_n);
         {#WARRANT_TYP_LIST = [#}
         {#(1, '房产'), (2, '房产包'), (5, '土地'), (11, '应收'), (21, '股权'),#}
@@ -31,7 +32,7 @@
                 $('#form_house_add_edit').show();
                 break;
             case ('2'):{#房产包#}
-                $('.warrant-extend').hide()
+                $('.warrant-extend').hide();
                 break;
             case ('5'):{#土地#}
                 $('#form_ground_add_edit').show();
@@ -64,10 +65,8 @@
         $('#id_warrant_typ').change(function () {
             console.log("bind_id_warrant_typ");
             $('.warrant-extend').hide();
+            $('#id_search_custom').hide();
             var selected_warrant_typ = $('#id_warrant_typ').val();
-
-            console.log(selected_warrant_typ);
-
             switch (selected_warrant_typ) {
                 case ('0'):
                     $('#form_house_add_edit').show();
@@ -83,18 +82,23 @@
                     break;
                 case ('11'):{#应收#}
                     $('#form_receivable_add_edit').show();
+                    $('#id_search_custom').show();
                     break;
                 case ('21'):{#股权#}
                     $('#form_stockes_add_edit').show();
+                    $('#id_search_custom').show();
                     break;
                 case ('31'):{#票据#}
                     $('#form_draft_add_eidt').show();
+                    $('#id_search_custom').show();
                     break;
                 case ('41'):{#车辆#}
                     $('#form_vehicle_add_eidt').show();
+                    $('#id_search_custom').show();
                     break;
                 case ('51'):{#动产#}
                     $('#form_chattel_add_eidt').show();
+                    $('#id_search_custom').show();
                     break;
                 case ('99'):{#他权#}
                     $('#form_hypothecs_add_eidt').show();
