--- a/A_dbms/templates/dbms/warrant/modl/mod_form/vehicle-add-edit.html
+++ b/A_dbms/templates/dbms/warrant/modl/mod_form/vehicle-add-edit.html
@@ -1,11 +1,22 @@
 <div id="form_vehicle_add_eidt" class="warrant-extend" style="display: none">
 
-    <div class="form-group"><!--车辆所有人-->
+    <div class="form-group"><!--所有者-->
+        <label for="id_vehicle_ownerr"
+               class="col-sm-3 control-label">{{ form_vehicle_add_eidt.vehicle_owner.label }}：</label>
+        <div class="col-sm-9">
+            <select name="vehicle_owner" id="id_vehicle_ownerr" required="" class="form-control search-id">
+                <option value="" selected="">---------</option>
+            </select>
+        </div>
+        <label id="e_vehicle_owner" class="pull-right">{{ form_vehicle_add_eidt.vehicle_owner.errors }}</label>
+    </div>
+    <!--
+    <div class="form-group">
         <label for="id_vehicle_ownerr"
                class="col-sm-3 control-label">{{ form_vehicle_add_eidt.vehicle_owner.label }}：</label>
         <div class="col-sm-9">{{ form_vehicle_add_eidt.vehicle_owner }}</div>
         <label id="e_vehicle_owner" class="pull-right">{{ form_vehicle_add_eidt.vehicle_owner.errors }}</label>
-    </div>
+    </div>车辆所有人-->
 
     <div class="form-group"><!--车架号-->
         <label for="id_frame_num" class="col-sm-3 control-label">{{ form_vehicle_add_eidt.frame_num.label }}：</label>
