--- a/templates/sub/nav_bar.html
+++ b/templates/sub/nav_bar.html
@@ -14,7 +14,7 @@
                         {{ request.user.name }}<span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">个人信息</a></li>
+                        <li><a href="/admin/">个人信息</a></li>
                         <li><a href="{% url 'logout' %}">退出系统</a></li>
                     </ul>
                 </li>
