--- a/A_dbms/templates/dbms/index_dbms.html
+++ b/A_dbms/templates/dbms/index_dbms.html
@@ -1,64 +1,66 @@
+{#{% extends 'index.html' %}#}
+
 {% extends 'base.html' %}
 {% block title %}个人首页{% endblock %}
 {% block body %}
-    {% include 'sub/nav_bar.html' %} {#导航栏}#}
-    <div class="container-fluid">{#主体框架}#}
-        <div class="row">{#主体框架}#}
-            <div class="col-sm-2 col-md-2 sidebar">{#左侧菜单}#}
+    {% include 'sub/nav_bar.html' %} <!--导航栏-->
+    <div class="container-fluid"><!--主体框架-->
+        <div class="row"><!--主体框架-->
+            <div class="col-sm-2 col-md-2 sidebar"><!--左侧菜单-->
                 <ul class="nav nav-sidebar">
-                    <li><a href={% url 'dbms:index' %}>我的主页</a></li>
+                    <li><a style="padding-bottom: 5px;padding-top: 5px;" href={% url 'dbms:index' %}>我的主页</a></li>
                     {% for mm in request.session.menus %}
-                        <li><a href={% url mm.url_name %}>{{ mm.name }}</a></li>
+                        <li><a style="padding-bottom: 5px;padding-top: 5px;" href={% url mm.url_name %}>{{ mm.name }}</a></li>
                     {% endfor %}
                 </ul>
             </div>
-            <div class="col-sm-10 col-sm-offset-3 col-md-10 col-md-offset-2 main" style="padding: 1px;">{#右侧主体框架}#}
-                {% block right-content-container %}{#右侧内容}#}
+            <div class="col-sm-10 col-sm-offset-3 col-md-10 col-md-offset-2 main" style="padding: 1px;">{#右侧主体框架}
+                {% block right-content-container %}<!--右侧内容-->
                     <h2 class="page-header">跟踪事项：</h2>
-                    {#                    {% if no_feedback_count > 0 %}#}
+                                        {% if no_feedback_count > 0 %}
                     <h3>待反馈项目：<a href="{% url 'dbms:article' article_state=1 %}">{{ no_feedback_count }}</a>
                     </h3>
-                    {#                    {% endif %}#}
-                    {#                    {% if no_ascertain_count > 0 %}#}
+                                        {% endif %}
+                                        {% if no_ascertain_count > 0 %}
                     <h3>未落实风控条件项目：
                         <a href="{% url 'dbms:provide_agree' agree_state=31 %}">{{ no_ascertain_count }}</a>
                     </h3>
-                    {#                    {% endif %}#}
-                    {#                    {% if no_pigeonhole_count > 0 %}#}
+                                        {% endif %}
+                                        {% if no_pigeonhole_count > 0 %}
                     <h3>未归档项目：<a href="{% url 'dbms:pigeonhole' implement=1 %}">{{ no_pigeonhole_count }}</a></h3>
-                    {#                    {% endif %}#}
-                    {#                    <h3>待保后项目：<a href="{% url 'dbms:pigeonhole' implement=1 %}">{{ no_pigeonhole_count }}</a></h3>#}
-                    {#                    {% if overdue_count > 0 %}#}
+                                        {% endif %}
+                                        <h3>待保后项目：<a href="{% url 'dbms:pigeonhole' implement=1 %}">{{ no_pigeonhole_count }}</a></h3>
+                                        {% if overdue_count > 0 %}
                     <h3>逾期项目：<a href="{% url 'dbms:overdue' %}">{{ overdue_count }}</a></h3>
-                    {#                    {% endif %}#}
-                    {#                    {% if soondue_count > 0 %}#}
+                                        {% endif %}
+                                        {% if soondue_count > 0 %}
                     <h3>30天内到期项目：<a href="{% url 'dbms:soondue' %}">{{ soondue_count }}</a></h3>
-                    {#                    {% endif %}#}
+                                        {% endif %}
 
-                    {#                    {% if overdue_draft_count > 0 %}#}
+                                        {% if overdue_draft_count > 0 %}
                     <h3>逾期票据：<a href="{% url 'dbms:overdue_draft' %}">{{ overdue_draft_count }}</a></h3>
-                    {#                    {% endif %}#}
-                    {#                    {% if soondue_draft_count > 0 %}#}
+                                        {% endif %}
+                                        {% if soondue_draft_count > 0 %}
                     <h3>30天内到期票据：<a href="{% url 'dbms:soondue_draft' %}">{{ soondue_draft_count }}</a></h3>
-                    {#                    {% endif %}#}
-                    {#                    {% if overdue_draft_count > 0 %}#}
+                                        {% endif %}
+                                        {% if overdue_draft_count > 0 %}
                     <h3>逾期协议：<a href="{% url 'dbms:overdue_cooperator' %}">{{ overdue_cooperator_count }}</a></h3>
-                    {#                    {% endif %}#}
-                    {#                    {% if soondue_draft_count > 0 %}#}
+                                        {% endif %}
+                                        {% if soondue_draft_count > 0 %}
                     <h3>30天内到期协议：
                         <a href="{% url 'dbms:soondue_cooperator' %}">{{ soondue_cooperator_count }}</a></h3>
-                    {#                    {% endif %}#}
-                    {#                    {% if overdue_seal_count > 0 %}#}
+                                        {% endif %}
+                                        {% if overdue_seal_count > 0 %}
                     <h3>逾期查封：<a href="{% url 'dbms:overdue_seal' %}">{{ overdue_seal_count }}</a></h3>
-                    {#                    {% endif %}#}
-                    {#                    {% if soondue_seal_count > 0 %}#}
+                                        {% endif %}
+                                        {% if soondue_seal_count > 0 %}
                     <h3>30天内到期查封：
                         <a href="{% url 'dbms:soondue_seal' %}">{{ soondue_seal_count }}</a></h3>
-                    {#                    {% endif %}#}
-                    {#                    {% if overdue_search_count > 0 %}#}
+                                        {% endif %}
+                                        {% if overdue_search_count > 0 %}
                     <h3>超过30天未跟踪的查封资产：
                         <a href="{% url 'dbms:overdue_search' %}">{{ overdue_search_count }}</a></h3>
-                    {#                    {% endif %}#}
+                                        {% endif %}
                 {% endblock %}
             </div>
         </div>
