--- a/A_dbms/templates/dbms/index_dbms.html
+++ b/A_dbms/templates/dbms/index_dbms.html
@@ -30,7 +30,7 @@
                     {% if no_pigeonhole_count > 0 %}
                         <h3>未归档项目：<a href="{% url 'dbms:pigeonhole' implement=1 %}">{{ no_pigeonhole_count }}</a></h3>
                     {% endif %}
-{#                    <h3>待保后项目：<a href="{% url 'dbms:pigeonhole' implement=1 %}">{{ no_pigeonhole_count }}</a></h3>#}
+                    <h3>待保后项目：<a href="{% url 'dbms:pigeonhole' implement=1 %}">{{ no_pigeonhole_count }}</a></h3>
                     {% if overdue_count > 0 %}
                         <h3>逾期项目：<a href="{% url 'dbms:overdue' %}">{{ overdue_count }}</a></h3>
                     {% endif %}
