--- a/A_dbms/templates/dbms/warrant/ground/ground-table.html
+++ b/A_dbms/templates/dbms/warrant/ground/ground-table.html
@@ -8,27 +8,30 @@
         {#<caption><h4>项目管理</h4></caption>#}
         <thead>
         <tr style="text-align: center">
-            <th>编号</th>
+            <th>序号</th>
             <th>坐落</th>
             <th>类型</th>
             <th>建筑面积</th>
-            <th>产权证</th>
+            <th>产权人</th>
+
         </tr>
         </thead>
         <tbody>
-        {% for ground in ground_list %}
+        {% for ground in p_list %}
             <tr>
                 <td>
                     <a href="{% url 'dbms:warrant_scan' warrant_id=ground.warrant.id %}">
-                        {{ ground.warrant.warrant_num }}{% if not forloop.last %}、{% endif %}
+                        {{ forloop.counter }}
                     </a>
                 </td>
+
                 <td>{{ ground.ground_locate }}</td>
                 <td>{{ ground.get_ground_app_display }}</td>
                 <td>{{ ground.ground_area }}</td>
                 <td>
                     {% for ownership in ground.warrant.ownership_warrant.all %}
-                        {{ ownership.ownership_num }}、
+                        {{ ownership.owner.short_name }}（{{ ownership.ownership_num }}）}
+                        {% if not forloop.last %}、{% endif %}
                     {% endfor %}
                 </td>
             </tr>
