--- a/templates/index.html
+++ b/templates/index.html
@@ -32,10 +32,11 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
-        <div class="row">
+    <div class="container-fluid"><!--主体框架-->
+        <div class="row"><!--主体框架-->
             <div class="col-sm-3 col-md-2 sidebar"><!--菜单-->
                 <ul class="nav nav-sidebar">
+                    <li><a style="padding-bottom: 5px;padding-top: 5px;" href={% url 'dbms:index' %}>我的主页</a></li>
                     {% for menu in menu_result %}
                         <li class="carte-parrent"><a style="padding-bottom: 5px;padding-top: 5px;">
                             {{ menu.caption }}</a>
@@ -66,9 +67,8 @@
                     {% endfor %}
                 </ul>
             </div>
-            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main"
-                 style="padding-left: 1px;padding-right: 1px;"> <!--主体-->
-                {% block right-content-container %}
+            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" style="padding-left: 1px;padding-right: 1px;"> <!--主体-->
+                {% block right-content-container %}<!--右侧内容-->
                     <h2 class="page-header"><a href="{% url 'dbms:index' %}">测试页，点击进入正式系统</a></h2>
                     <ul>
                         {% for menu in menu_result %}
