--- a/A_dbms/templates/dbms/article/article/article-table.html
+++ b/A_dbms/templates/dbms/article/article/article-table.html
@@ -22,7 +22,7 @@
         {% for article in p_list %}
             <tr>
                 <td>
-                    <a href="{% url 'dbms:article_scan_all' article_id=article.id %}">
+                    <a href="{% url 'dbms:article_scan' article_id=article.id %}">
                         {{ article.article_num }}
                     </a>
                 </td>
